--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "groq>=1.0.0",
+    "minsearch>=0.0.7",
+    "pandas>=2.3.3",
     "python-frontmatter>=1.1.0",
     "requests>=2.32.5",
+    "sentence-transformers>=5.2.0",
     "tqdm>=4.67.1",
 ]
