--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "groq>=1.0.0",
     "minsearch>=0.0.7",
     "pandas>=2.3.3",
+    "pydantic-ai>=1.42.0",
     "python-frontmatter>=1.1.0",
     "requests>=2.32.5",
     "sentence-transformers>=5.2.0",
